scripts/astro-sync-finish.log
=== us 19:03:54 ===

==> us (United States) locales=[en-US] — 45 kw
    added ~9 new (0 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== sv 19:10:46 ===

==> sv (El Salvador) locales=[es-ES, es-MX, en-US] — 40 kw
    added ~2 new (41 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== se 19:15:42 ===

==> se (Sweden) locales=[sv, en-US] — 35 kw
    added ~3 new (41 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== ua 19:15:49 ===

==> ua (Ukraine) locales=[uk, ru, en-US] — 45 kw
    added ~3 new (52 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== sk 19:15:54 ===

==> sk (Slovakia) locales=[sk, cs, en-US] — 45 kw
    added ~0 new (52 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== si 19:16:50 ===

==> si (Slovenia) locales=[hr, it, en-US] — 45 kw
    added ~5 new (45 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== tr 19:17:46 ===

==> tr (Türkiye) locales=[tr, en-US] — 41 kw
    added ~0 new (51 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== uz 19:18:00 ===

==> uz (Uzbekistan) locales=[ru, en-US] — 41 kw
    added ~0 new (40 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== tw 19:18:14 ===

==> tw (Taiwan) locales=[zh-Hant, en-US] — 39 kw
    added ~0 new (46 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== sg 19:18:17 ===

==> sg (Singapore) locales=[en-GB, en-US] — 25 kw
    added ~11 new (0 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== th 19:26:06 ===

==> th (Thailand) locales=[th, en-US] — 40 kw
    added ~6 new (47 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== vn 19:28:18 ===

==> vn (Vietnam) locales=[vi, en-US] — 40 kw
    added ~0 new (50 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== in 19:30:30 ===

==> in (India) locales=[hi, en-GB, en-US] — 41 kw
    added ~0 new (52 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== sa 19:30:30 ===

==> sa (Saudi Arabia) locales=[ar-SA, en-US] — 45 kw
    added ~0 new (53 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== iq 19:30:33 ===

==> iq (Iraq) locales=[ar-SA, en-US] — 45 kw
    added ~0 new (49 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
=== za 19:30:35 ===

==> za (South Africa) locales=[en-GB, en-US] — 25 kw
    batch fail: [Errno 54] Connection reset by peer
    added ~0 new (26 existing)

Wrote /Users/jackwallner/headaches/scripts/astro-keywords-by-store/ (1 stores) — playbook: astro-global-aso-go-2026.md
  File "<stdin>", line 28
    print(f"Merged summary: {len(stores)} stores at {summary[\"syncedAt\"]}")
                                                                            ^
SyntaxError: f-string expression part cannot include a backslash
